--- a/手把手实现出海网站收款全流程/1、海外公司注册.md
+++ b/手把手实现出海网站收款全流程/1、海外公司注册.md
@@ -1,6 +1,7 @@
 # 海外公司注册
 
 ## 1. 大家好
+
 大家好，我是骑龙，一位出海新人，出海时间，满打满算也有一年多了。一开始，我对出海所知甚少，无从下手，后来在朋友的推荐下，参加了出海社区和社群。加入社区和社群后，简直是打开了新世界的大门！没想到出海的世界如此精彩，如此令人着迷。
 
 在这一年多里，从学习找关键词（需求），学习 SEO，一步一步走来，一共开发上线了 4 个工具类的网站，虽然这几个站，目前都还没有带来什么收益，但我并不气馁，因为我相信，只要坚持走下去，赚钱是迟早的事。
@@ -18,12 +19,14 @@
 <img src="../public/海外网站收款所需前置准备.png" width="467px" height="581px" alt="海外网站收款所需前置准备">
 
 > 注意：
-> - 「实益所有权信息报告」我注册的时候，只要 9 美元，现在涨价了，需要 25 美元。
+>
+> - 「实益所有权信息报告(BOI)」我注册的时候，只要 9 美元，现在涨价了，需要 25 美元。
 > - 公司备案费用也涨价了，原来是 100 美元，现在需要 104 美元。
 > - 所以上面的图片中，159 美元 -> 179 美元。
 > - 大家需要注册的话，还是尽早行动起来吧。
 
 ### 花费时间
+
 这是我第一次走完全流程，花费时间比较长，从 6 月 2 日申请注册公司开始，到 7 月 22 日激活 Stripe，一共花费了 51 天！这期间走了不少弯路（尝试了两次水星银行），遇到不少坑（比如 IRS 把公司法人名字写错了），主要时间都是等待上。
 
 我这种情况比较特殊，大家应该不用这么多时间，下面是正常流程大概花费的时间，仅作参考。
@@ -37,19 +40,22 @@
 
 **注意：** 以上所列天数均为工作日，不包括周末和法定假日。
 
-
 ## 3. 注册海外公司
+
 在这篇文章中，给大家介绍怎么注册一个海外公司，我注册的是美国的公司，所以这里就以美国公司为例了。
 
 ### （1）注册地址
+
 👉 [wyomingagents](https://www.wyomingagents.com/)
 
 wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代理机构，怀俄明州的税收很低，适合小团队或者个人注册公司，成本低。
 
 ### （2）注册流程
+
 - 选择「Form a Company」（成立公司）
->  - 这里显示注册公司只需要 $150，下面有一个「实益所有权信息报告」选项需要加上，届时再做说明。
->  - 不用先注册登录这个网站，在后续的流程中，会让你注册网站的。
+>
+> - 这里显示注册公司只需要 $150，下面有一个「实益所有权信息报告」(BOI)选项需要加上，届时再做说明。BOI是美国公司必须申报的一个工作，表明该公司的受益人是谁。
+> - 不用先注册登录这个网站，在后续的流程中，会让你注册网站的。
 
 <img src="../public/form-a-company.png" width="511px" height="452px" alt="选择创办公司">
 
@@ -101,6 +107,7 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 ① **Email（电子邮件）**：这个步骤是注册 wyomingagents 网站的。填写自己最常用的邮箱即可。
 
 ② **Password（密码）**：密码，一定要按照要求填写密码，密码要求比较复杂，自己保存好，别忘了，公司相关的文档都会保存在这个网站，方便随时查卡。
+
 - 密码必须至少8个字符
 - 密码必须包含至少一个大写字母
 - 密码必须包含至少一个数字
@@ -112,6 +119,7 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 <img src="../public/wyoming-business-presence-package.png" width="335px" height="265px" alt="怀俄明州商业启动套餐">
 
 ① **Wyoming Business Presence Package（怀俄明州商业启动套餐）**：这个套餐包含：
+
 - 1 年免费域名（价值最高 25 美元）：后面会让你提供一个公司域名，然后会自动使用 WordPress 搭建一个很简单的公司官网，几乎没法用，需要自己去后台修改。
 - 电子邮件和电话服务：会提供一个免费试用的美国怀俄明州的电话号码，有 APP，可以接收短信（亲测有效，但是电报的验证码收不到，问了官方，他们说应该是可以的，但我没收到，可能是网络或者其他原因，不纠结了），网络电话好像不太好用，几乎也用不着。
 
@@ -131,6 +139,7 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 <img src="../public/billing.jpeg" width="276px" height="135px" alt="支付成功短信">
 
 ### （3）确认注册信息
+
 完成以上注册公司订单之后，信息填写部分就完成了，接下来，登录网站，确认订单上填写的公司信息，过程就比较简单了，我就把当时的截图贴一下吧。
 
 <img src="../public/verify-your-order.png" width="426px" height="385px" alt="账单信息">
@@ -138,25 +147,30 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 - 红色框里的内容都是需要确认的。
 - 接下来，点击「Continue」，验证各种信息。
 
-
 <img src="../public/verify-your-order-after.png" width="359px" height="426px" alt="账单信息">
 
 - 信息确认完之后，会给一个公司在美国的代理地址，这个地址就是公司注册地址，很多地方都用得到，记下来。
 
-至此，怀俄明州美国公司的注册申请就算完成了，静静等待就行，过几天来官网看一下，公司注册成功之后，可以在网站上看到公司相关的文档：Operating Agreement（运营协议，重要文件）、Initial Resolution（初始决议）、Formation Document（成立文件）
+至此，怀俄明州美国公司的注册申请就算完成了，静静等待就行，过几天来官网看一下，公司注册成功之后，可以在网站上看到公司相关的文档：
+
+- Operating Agreement（运营协议，重要文件）
+- Initial Resolution（初始决议）
+- Formation Document（成立文件）——Articles of Organization
 
 <img src="../public/operating-agreement-doc.png" width="401px" height="243px" alt="网站后台里的公司成立相关文件列表">
 
 ### （4）其他
+
 - 上面注册过程中，套餐里包含网站，手机号，商业电子邮件等信息，大家可以登录网站后台查看。
 - 公司网站是 WordPress 部署和发布的，后台有给账号和密码，自己登录 WP 修改官网，第一年是免费的，后面需要付费，可以在后台取消续费。
 - 公司邮箱账号也是一样，可以登录邮箱后台，收发邮件。
-- 美国手机号，下载他们的 APP，登录即可收发短信。
+- 美国手机号，下载他们的 APP，登录即可收发短信。（无法打国际长途，也无法接通）。
 - 商业电子邮件、SSL、电话和网站在免费试用期结束后，每月每项收费 9 美元。域名将在 1 年免费试用期后，根据域名的市场价格每年收费 25 美元。续订服务和注册代理服务将按年收费。
 
 <img src="../public/services.png" width="561px" height="298px" alt="网站后台里的相关服务和费用">
 
 ## 4. 说在最后
+
 以上就是注册美国公司的基本操作流程了，还是挺简单的，如果大家有需要，我建议尽早注册，避免再次涨价，一人公司，能省一点是一点。
 
 需要注意的是，如果需要开通空中云汇的支付，那么请一定要**去注册英国公司**，我也是后来才知道的，美国公司申请不下来，除非你有美国身份。但是能够开通美国银行卡，有了银行卡就可以接收 Stripe 的支付了。
